--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -66,7 +66,7 @@
             <div class="row text-center pb-2"><h5>Teasers</h5></div>
         </a>
 
-        <a href="#" class="nav-card card border-1 shadow-sm border-0 m-3" style="width:200px; min-height:150px; border-radius:5px;">
+        <a href="/admin/viya1/client" class="nav-card card border-1 shadow-sm border-0 m-3" style="width:200px; min-height:150px; border-radius:5px;">
             <div class="card-body d-flex justify-content-center" style="width:180px; height:120px;">
                 <div class="rounded-circle d-flex justify-content-center align-items-center" style="width:90px; height:90px; font-size: 50px; color:#1b2e4d; background-color:#e5f4e7;">
                     <i class="fa-solid fa-people-group"></i>
@@ -77,79 +77,8 @@
     </div>
 
 <div class="row container-fluid p-2" style="font-family:Trebuchet MS;">
-        <!-- Person Card START -->
-        <div class="col-lg-4 col-sm-12 d-flex justify-content-center">
-            <div class="m-0 p-3 m-3" style="height:700px; background-color: #003b39; border-radius: 5px; width:500px;">
-                <div class="row d-flex justify-content-center">
-                    <img src="https://api.uifaces.co/our-content/donated/xZ4wg2Xj.jpg" style="width:200px; height:200px; object-fit:cover;" alt="" class="p-0 rounded-circle">
-                </div>
-                <div class="row text-light text-center mt-2 mb-4">
-                    <span class="fs-2">John Doe</span>
-                    <span class="fs-5">Case id: ###</span>
-                </div>
-                <div class="row">
-                    <div class="col-6 text-light text-start fs-5">
-                        <p class="p-0 m-0">Nationality:</p>
-                        <p class="p-0 m-0">Birth Date:</p>
-                        <p class="p-0 m-0">Application Date:</p>
-                        <p class="p-0 m-0">Status:</p>
-                        <p class="p-0 m-0">Contact No:</p>
-                        <p class="p-0 m-0">E-mail:</p>
-                        <p class="p-0 m-0">Agency</p>
-                        <p class="p-0 m-0">Reference</p>
-                    </div>
-                    <div class="col-6 text-light text-start fs-5 fw-lighter">
-                        <p class="p-0 m-0 fw-light">Algerian</p>
-                        <p class="p-0 m-0 fw-light">05.05.1995</p>
-                        <p class="p-0 m-0 fw-light">05.08.2022</p>
-                        <p class="p-0 m-0 fw-light">Still in progress</p>
-                        <p class="p-0 m-0 fw-light">+90 555 55 55</p>
-                        <p class="p-0 m-0 fw-light">john@exmp.com</p>
-                        <p class="p-0 m-0 fw-light">Bayat Group</p>
-                        <p class="p-0 m-0 fw-light">None</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Person Card END -->
-
-        <div class="col-lg-7">
-            <div class="row">
-                <table class="w-100 mt-3 my-1">
-                    <tr style="background-color:#003b39">
-                        <th class="border-1 border p-2 text-center text-light">Document Title</th>
-                        <th class="border-1 border p-2 text-center text-light">File to upload</th>
-                        <th class="border-1 border p-2 text-center text-light">Notes</th>
-                    </tr>
-                    <tr>
-                        <td class="border-1 border"><input class="w-100 h-100 bg-transparent border-0" type="text"></td>
-                        <td class="border-1 border"><input class="w-100 h-100 bg-transparent"  type="file"></td>
-                        <td class="border-1 border"><input class="w-100 h-100 bg-transparent border-0" type="text"></td>
-                    </tr>
-                </table>
-                <div class="col-sm-0 col-lg-4"></div>
-                <div class="col-sm-0 col-lg-5"></div>
-                <div class="col-sm-12 col-lg-3 p-0 d-flex justify-content-end"><button class="text-light border-0 py-1 rounded" style="background-color:#003b39; width:100%;"><i class="fa-solid fa-upload"></i> Upload</button></div>
-            </div>
-            <div class="row">
-                <table class="w-100 my-3">
-                    <tr style="background-color:#003b39">
-                        <th class="border-1 border p-2 text-center text-light">Document Title</th>
-                        <th class="border-1 border p-2 text-center text-light">Download</th>
-                        <th class="border-1 border p-2 text-center text-light">Upload Date</th>
-                        <th class="border-1 border p-2 text-center text-light">Notes</th>
-                    </tr>
-                    <tr class="text-center">
-                        <td class="border-1 border fw-light">Marriage Certificate</td>
-                        <td class="border-1 border fw-light"><button class="btn w-100 text-light bg-dark"><i class="fa-solid fa-download"></i></button></td>
-                        <td class="border-1 border fw-light">25.05.2022</td>
-                        <td class="border-1 border fw-light">Some Additional Notes</td>
-                    </tr>
 
 
-                </table>
-            </div>
-        </div>
     </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
@@ -166,7 +95,7 @@
 {% block sidebar %}
 {#    {{block.super}}#}
     <div>
-        <h1>Extra fasefaefasdfasdflinks</h1>
+        <h1>Welcome to the new system!</h1>
 {#        <a href="/admin/extra/">My extra link</a>#}
     </div>
 {% endblock %}
