--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -57,6 +57,24 @@
 {#        </nav>#}
 
 <div class="row p-5 d-flex justify-content-center">
+        <a href="/admin/viya1/offerproject" class="nav-card card border-1 shadow-sm border-0 m-3" style="width:200px; min-height:150px; border-radius:5px;">
+            <div class="card-body d-flex justify-content-center" style="width:180px; height:120px;">
+                <div class="rounded-circle d-flex justify-content-center align-items-center" style="width:90px; height:90px; font-size: 50px; color:#1b2e4d; background-color:#e5f4e7;">
+                    <i class="fa-solid fa-city"></i>
+                </div>
+            </div>
+            <div class="row text-center pb-2"><h5>Projects</h5></div>
+        </a>
+
+    <a href="/admin/viya1/offers" class="nav-card card border-1 shadow-sm border-0 m-3" style="width:200px; min-height:150px; border-radius:5px;">
+            <div class="card-body d-flex justify-content-center" style="width:180px; height:120px;">
+                <div class="rounded-circle d-flex justify-content-center align-items-center" style="width:90px; height:90px; font-size: 50px; color:#1b2e4d; background-color:#e5f4e7;">
+                    <i class="fa-solid fa-city"></i>
+                </div>
+            </div>
+            <div class="row text-center pb-2"><h5>Offers</h5></div>
+        </a>
+
         <a href="/admin/viya1/property" class="nav-card card border-1 shadow-sm border-0 m-3" style="width:200px; min-height:150px; border-radius:5px;">
             <div class="card-body d-flex justify-content-center" style="width:180px; height:120px;">
                 <div class="rounded-circle d-flex justify-content-center align-items-center" style="width:90px; height:90px; font-size: 50px; color:#1b2e4d; background-color:#e5f4e7;">
@@ -94,8 +112,8 @@
 
 {% block sidebar %}
 {#    {{block.super}}#}
-    <div>
-        <h1>Welcome to the new system!</h1>
+    <div class="card-body d-flex justify-content-center">
+        <h1>Welcome to the Viya's Database!</h1>
 {#        <a href="/admin/extra/">My extra link</a>#}
     </div>
 {% endblock %}
