--- a/templates/admin/viya1/property/csv_form.html
+++ b/templates/admin/viya1/property/csv_form.html
@@ -12,12 +12,12 @@
 {#                {{ form.as_p }}#}
 
 
-    <form action="get_link" method="post">
+    <form action="get_link1" method="post">
         {% csrf_token %}
     <label for="your_link">Copy your link: </label>
     <input id="your_link" type="text" name="your_name" value="{{ current_name }}">
     <input type="submit" value="OK">
-        <a href="get_link/"> ok <form>
+        <a href="get_link1/"> ok <form>
      </form>
 
 
